--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.10.0,<3.12"
 requests = "^2.32.3"
 flask = "^3.0.3"
 apscheduler = "^3.10.4"
+pandas = "^2.2.2"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
